<resources>
    <string name="login_caps">"LOGIN"</string>
    <string name="welcome_caps">"WELCOME"</string>
    <string name="instructions_caps">"INSTRUCTIONS"</string>
    <string name="shoes_caps">"SHOES"</string>
    <string name="add_shoe_caps">"ADD SHOE"</string>

    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Create new account</string>
    <string name="logout">Logout</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >10 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_title">"Welcome to the Shoe Store!"</string>
    <string name="welcome_text">"This is just a simple shoe store that shows what I have learned in the Android Kotlin Developer course so far. I hope that you will enjoy it."</string>
    <string name="continue_text">"Continue"</string>
    <string name="instruction_title">How to use this app</string>
    <string name="instruction_text">
    <li>Continue to the next screen</li>\n
    <li>Tap the plus Icon to add a new shoe</li>\n
    <li>Enter the details of your shoe</li>\n
    <li>Tap Save</li>\n
    <li>All your shoes will be displayed</li>\n
    </string>
    <string name="add_shoe">Pick your new shoe!</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="name">Name</string>
    <string name="shoe_list_item_template">%1$s %2$s \n%3$.1f \n%4$s</string>
</resources>
