<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.instructions.InstructionFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/instruction_title"
                style="@android:style/Widget.Material.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:layout_marginEnd="@dimen/fragment_horizontal_margin"
                android:text="@string/instruction_title"
                android:textSize="@dimen/text_size_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instruction_text"
                style="@android:style/Widget.Material.TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:layout_marginEnd="@dimen/fragment_horizontal_margin"
                android:text="@string/instruction_text"
                android:textAlignment="textStart"
                android:textSize="@dimen/text_size_list_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instruction_title" />

            <Button
                android:id="@+id/instruction_continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:layout_marginEnd="@dimen/fragment_horizontal_margin"
                android:layout_marginBottom="@dimen/fragment_vertical_margin"
                android:text="@string/continue_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instruction_text"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>