<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeDetailViewModel"
            type="com.udacity.shoestore.screens.shoedetails.ShoeDetailViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.shoedetails.ShoeDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/shoeDetailLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:layout_marginEnd="@dimen/fragment_horizontal_margin"
                android:text="@string/add_shoe"
                android:textSize="@dimen/text_size_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoeDetailCompanyLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:hint="@string/company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeDetailLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoeDetailCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:minHeight="@dimen/touch_target_min_height"
                    android:minLines="1"
                    android:text="@={shoeDetailViewModel.company}"
                    android:textColorHint="@color/colorHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoeDetailNameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:hint="@string/name"
                android:minHeight="@dimen/touch_target_min_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shoeDetailCompanyLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoeDetailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:minHeight="@dimen/touch_target_min_height"
                    android:minLines="1"
                    android:text="@={shoeDetailViewModel.name}"
                    android:textColorHint="@color/colorHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoeDetailSizeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:hint="@string/size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shoeDetailNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoeDetailSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:minHeight="@dimen/touch_target_min_height"
                    android:minLines="1"
                    android:text="@={shoeDetailViewModel.size}"
                    android:textColorHint="@color/colorHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoeDetailDescriptionLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:hint="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shoeDetailSizeLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoeDetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:maxLength="60"
                    android:maxLines="2"
                    android:minHeight="@dimen/touch_target_min_height"
                    android:minLines="1"
                    android:text="@={shoeDetailViewModel.description}"
                    android:textColorHint="@color/colorHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_save"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:enabled="@{shoeDetailViewModel.name.length() > 0 &amp;&amp; shoeDetailViewModel.company.length() > 0 &amp;&amp; shoeDetailViewModel.size.length() > 0 &amp;&amp; shoeDetailViewModel.description.length() > 0}"
                android:minHeight="@dimen/touch_target_min_height"
                android:text="@string/save"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_cancel"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:layout_marginEnd="@dimen/fragment_horizontal_margin"
                android:layout_marginBottom="@dimen/fragment_vertical_margin"
                android:minHeight="@dimen/touch_target_min_height"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/button_save"
                app:layout_constraintTop_toBottomOf="@+id/shoeDetailDescriptionLayout"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>